<resources>
    <string name="app_name">Sofra</string>
    <string name="order_food">Order food</string>
    <string name="sale_food">Sale food</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_press">Don\'t have an account ? press</string>
    <string name="here">here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_you_forget_password">Do you forget password ?</string>
    <string name="wait_moment">Please, wait a moment.</string>
    <string name="go_on">Go on</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="deliver_time">Deliver time</string>
    <string name="password_confirm">Password confirm</string>
    <string name="min_order">Minimum order</string>
    <string name="cost">Deleviry Cost</string>
    <string name="communication_data">Communication Data</string>
    <string name="phone">Phone</string>
    <string name="whats_app">Whats app</string>
    <string name="store_pic">Store picture</string>
    <string name="register">Sign Up</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="my_categories">My Categories</string>
    <string name="category_name">Categroy name</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="price_in_sale">Price in sale</string>
    <string name="small_description">Small description</string>
    <string name="product_name">Product name</string>
    <string name="add_food_picture">Add food picture</string>
    <string name="more">More</string>
    <string name="my_offers">My offers</string>
    <string name="contact_us">Contact us</string>
    <string name="about_application">About application</string>
    <string name="comments_and_rates">Comments and rates</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="no_internet">You should connect to internet</string>
    <string name="error">An error occurred</string>
    <string name="insert_email">Please, insert Email</string>
    <string name="insert_password">Please, insert password</string>
    <string name="category_pic">Category picture</string>
    <string name="insert_category_name">Insert category name</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="update_category">Update category</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirmation">New password confirmation</string>
    <string name="insert_old_password">Insert old password</string>
    <string name="insert_password_does_not_match">Password does not match</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="insert_restaurant_name">Insert restaurant name</string>
    <string name="insert_delivery_time">Insert delivery time</string>
    <string name="choose_region">Choose region</string>
    <string name="insert_cost">Insert delivery cost</string>
    <string name="insert_min_order">Insert minimum order</string>
    <string name="insert_correct_phone">Insert correct phone</string>
    <string name="insert_correct_whats">Insert correct whatsapp</string>
    <string name="insert_product_name">Insert product name</string>
    <string name="insert_description">Insert description</string>
    <string name="insert_price">Insert price</string>
    <string name="insert_price_sale">Insert price sale</string>
    <string name="product_photo">Product photo</string>
    <string name="status">Status</string>
    <string name="insert_region">Insert region</string>
    <string name="add_offer_picture">Add offer picture</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="offer_name">Offer name</string>
    <string name="choose_time">Choose a time</string>
    <string name="insert_order_name">Insert order name</string>
    <string name="insert_date_from">Insert the date of order beginning</string>
    <string name="insert_date_to">Insert the date of order terminate</string>
    <string name="my_orders">My orders</string>
    <string name="order_new">New orders</string>
    <string name="order_current">Current orders</string>
    <string name="order_previous">Previous orders</string>
    <string name="order_number">Order number :</string>
    <string name="client_name">Client Name :</string>
    <string name="total">Total :</string>
    <string name="address">Address :</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="your_favorite_restaurant">Your favorite restaurant</string>
    <string name="opened">Opened</string>
    <string name="food_list">Food list</string>
    <string name="comments_ratings">Comments and ratings</string>
    <string name="restaurant_info">Restaurant information</string>
    <string name="special_order">Special order</string>
    <string name="quantity">Quantity</string>
    <string name="confirm_request">Confirm the request</string>
    <string name="add_more">Add more</string>
    <string name="no_items_count">No food items found</string>
    <string name="the_offers">The offers</string>
    <string name="order_details">Order details</string>
    <string name="add_notes">Add notes</string>
    <string name="pay_method">Pay method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="online">Online cash</string>
    <string name="deliver_cost">Deliver cost</string>
    <string name="total_price">Total price</string>

</resources>
