<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="@dimen/dim_20dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/change_password_fragment_et_old"
        android:hint="@string/old_password"
        style="@style/ETChangePassword"
        />
    <EditText
        android:id="@+id/change_password_fragment_et_new"
        android:hint="@string/new_password"
        style="@style/ETChangePassword"
        />
    <EditText
        android:id="@+id/change_password_fragment_et_new_confirm"
        android:hint="@string/new_password_confirmation"
        style="@style/ETChangePassword"
        />
    <Button
        android:id="@+id/change_password_fragment_btn_chnage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_80"
        android:layout_marginEnd="@dimen/dim_80"
        android:background="@drawable/button_backgrond_red_redius"
        android:text="@string/change"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/txt_16sp" />

</LinearLayout>