<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TVmore"
                android:text="@string/status"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/restautant_info_fragment_tv_status"
                style="@style/TVmore"
                tools:text="@string/my_offers"
                />

        </LinearLayout>

        <View
            style="@style/LineTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TVmore"
                android:text="@string/city"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/restautant_info_fragment_tv_city"
                style="@style/TVmore"
                tools:text="@string/my_offers"
                />

        </LinearLayout>

        <View
            style="@style/LineTheme"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TVmore"
                android:text="@string/region"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/restautant_info_fragment_tv_region"
                style="@style/TVmore"
                tools:text="@string/my_offers"
                />

        </LinearLayout>

        <View
            style="@style/LineTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/txt_12sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TVmore"
                android:text="@string/min_order"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/restautant_info_fragment_tv_min_order"
                style="@style/TVmore"
                tools:text="@string/my_offers"
                />

        </LinearLayout>

        <View
            style="@style/LineTheme"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TVmore"
                android:text="@string/cost"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/restautant_info_fragment_tv_cost"
                style="@style/TVmore"
                tools:text="@string/my_offers"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
